examples/good/log2.ypl
log2(): {
    a=10;
    b=0;
    while (a!=0):{
        a=a/2;
        b=b+1;
    }
    b = b - 1;
    out(b);
}

main(): {
	log2();
}