examples/bad/log2.ypl
main(): {
	a=10;
	b=0; 
	while (c!=0):{
		a=a/2;
		b=b+1;
	}
	b = b - 1;
}
